# mb-applet-input-manager

./: .autoipkg  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  mbinputmgr-applet.c  mbinputmgr-tray.c  mbinputmgr.c  mbinputmgr.h
